[gd_scene load_steps=5 format=3 uid="uid://qdh2jjrdpe1p"]

[ext_resource type="Script" path="res://Carros/Carro1.gd" id="1_edsi1"]
[ext_resource type="Texture2D" uid="uid://dafct7vwfbcdy" path="res://assets/car1.png" id="2_pph7c"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_n3252"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p4ghb"]
size = Vector2(19, 11)

[node name="Carro1" type="Node2D"]
position = Vector2(0, 6)
script = ExtResource("1_edsi1")

[node name="Car1" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("2_pph7c")

[node name="RigidBody2D" type="RigidBody2D" parent="Car1"]
position = Vector2(0, 6)
can_sleep = false
freeze = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Car1/RigidBody2D"]
material = SubResource("ShaderMaterial_n3252")
position = Vector2(0, -7)
shape = SubResource("RectangleShape2D_p4ghb")
one_way_collision_margin = 0.0

[node name="CarroArea" type="Area2D" parent="Car1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Car1/CarroArea"]
material = SubResource("ShaderMaterial_n3252")
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_p4ghb")
one_way_collision_margin = 0.0

[connection signal="hidden" from="Car1" to="." method="_on_car_1_hidden"]
[connection signal="body_entered" from="Car1/RigidBody2D" to="." method="_on_rigid_body_2d_body_entered"]
